<resources>
    <string name="app_name">CalendarView</string>

    <!-- Labels -->
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_gender">Gender</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_birthday">Birthday</string>
    <string name="label_address">Address</string>
    <string name="label_email">Email</string>
    <string name="label_terms">I agree to Terms of Use</string>
    <string name="label_register">Register</string>
    <string name="label_select">Select</string>

    <!-- Hints -->
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_address">Address</string>
    <string name="hint_email">Email</string>
</resources>